# ZX

./: build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: joys.txt  rom.ezx  scorpion8.mem  tapLoad48.ezx  tapLoader.zx  trdLoader.zx  trdosLoad128.ezx  trdosLoad48.ezx  zx.rom
app/src/main/assets/games/: Dizzy III.z80  DownToEarth.z80  HATE.z80  Highway Encounter.z80
app/src/main/cpp/: AY8912.cpp  CMakeLists.txt  stkMnemonic.h  zx-lib.cpp  zxALU.cpp  zxALU.h  zxAY.cpp  zxAY.h  zxAssembler.cpp  zxAssembler.h  zxBeta128.cpp  zxBeta128.h  zxBetaDisk.cpp  zxBetaDisk.h  zxCPU.cpp  zxCPU.h  zxCommon.cpp  zxCommon.h  zxDA.cpp  zxDA.h  zxDebugger.cpp  zxDebugger.h  zxDevs.cpp  zxDevs.h  zxDisk.cpp  zxDisk.h  zxFDD.cpp  zxFDD.h  zxFile.cpp  zxFile.h  zxFormats.cpp  zxFormats.h  zxGPU.cpp  zxGPU.h  zxKeybJoy.cpp  zxMagnitophon.cpp  zxMagnitophon.h  zxMemory.cpp  zxMnemonic.h  zxSound.cpp  (+11 more)
app/src/main/java/ru/ostrovskal/zx/: ZxCommon.java  ZxDebugger.kt  ZxKeyboard.kt  ZxListView.kt  ZxPreset.kt  ZxView.kt  ZxWnd.kt  plan.txt  zxPoke.kt
app/src/main/java/ru/ostrovskal/zx/forms/: ZxFormBreakPoints.kt  ZxFormCloud.kt  ZxFormDisk.kt  ZxFormIO.kt  ZxFormMain.kt  ZxFormMessage.kt  ZxFormPokes.kt  ZxFormSettings.kt  ZxFormTracer.kt
app/src/main/res/layout/: actionbar_view.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  forms.xml  icons.xml  ids.xml  menus.xml  strings.xml  styles.xml
app/src/main/res/values-land/: dimens.xml
app/src/main/res/values-port/: dimens.xml
app/src/main/res/values-ru/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
